--- a/index.html
+++ b/index.html
@@ -332,37 +332,28 @@
 </head>
 <body>
     <div class="header">
-        <h1>🍅 Greenhouse Cherry Tomato</h1>
+        <h1>🍅Cherry Tomato</h1>
     </div>
 
-    <div class="slider-container">
-        <div class="badge">FRESH</div>
-        <div class="slider" id="slider">
-            <div class="slide">
-                <div class="slide-placeholder">
-                    📸 Slide 1<br>
-                    <small style="color: #999; font-size: 14px;">Add your image here</small>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="slide-placeholder">
-                    📸 Slide 2<br>
-                    <small style="color: #999; font-size: 14px;">Add your image here</small>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="slide-placeholder">
-                    📸 Slide 3<br>
-                    <small style="color: #999; font-size: 14px;">Add your image here</small>
-                </div>
-            </div>
+<div class="slider-container">
+    <div class="badge">Organic</div>
+    <div class="slider" id="slider">
+        <div class="slide">
+            <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
-        <div class="slider-dots">
-            <div class="dot active" onclick="goToSlide(0)"></div>
-            <div class="dot" onclick="goToSlide(1)"></div>
-            <div class="dot" onclick="goToSlide(2)"></div>
+        <div class="slide">
+            <img src="cherry_to2.webp" alt="Cherry Tomato Image 2" style="width: 100%; height: 100%; object-fit: cover;">
+        </div>
+        <div class="slide">
+            <img src="cherry_to3.jpg" alt="Cherry Tomato Image 3" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
     </div>
+    <div class="slider-dots">
+        <div class="dot active" onclick="goToSlide(0)"></div>
+        <div class="dot" onclick="goToSlide(1)"></div>
+        <div class="dot" onclick="goToSlide(2)"></div>
+    </div>
+</div>
 
     <div class="container">
         <div class="product-info">
