--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             background: #f8f9fa;
             color: #333;
             line-height: 1.6;
+            position: relative; /* Ensure body is a positioning context for watermark */
         }
 
         .header {
-            background: linear-gradient(135deg, #2d5016 0%, #4a7c2c 100%);
+            background: linear-gradient(135deg, #ff6b6b 0%, #ff8c00 100%); /* Updated to tomato-inspired red-orange gradient */
             padding: 20px;
             text-align: center;
             color: white;
@@ -32,6 +33,21 @@
             font-size: 24px;
             font-weight: 600;
             letter-spacing: 0.5px;
+        }
+
+        .watermark {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 5; /* Below content but above background */
+            opacity: 00.08; /* Semi-transparent for watermark effect */
+            pointer-events: none; /* Prevents interaction with watermark */
+        }
+
+        .watermark img {
+            width: 300px; /* Larger size for visibility, adjust as needed */
+            height: auto;
         }
 
         .slider-container {
@@ -122,7 +138,7 @@
             padding: 25px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.1);
             position: relative;
-            z-index: 10;
+            z-indexupsert: 10px;
         }
 
         .product-title {
@@ -302,6 +318,10 @@
                 width: calc(100% - 30px);
                 margin: 20px 15px 40px;
             }
+
+            .watermark img {
+                width: 200px; /* Smaller watermark on mobile */
+            }
         }
 
         @media (min-width: 768px) {
@@ -335,8 +355,12 @@
         <h1>🍅Cherry Tomato</h1>
     </div>
 
-<div class="slider-container">
-    <div class="badge">Organic</div>
+    <div class="watermark">
+        <img src="christ_logo1.jpg" alt="Watermark Logo">
+    </div>
+
+    <div class="slider-container">
+    <div class="badge">FRESH</div>
     <div class="slider" id="slider">
         <div class="slide">
             <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
