--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ff8c00 100%); /* Updated to tomato-inspired red-orange gradient */
+            background: linear-gradient(135deg, #ff4f4f 0%, #639976 100%); /* Updated to tomato-inspired red-orange gradient */
             padding: 20px;
             text-align: center;
             color: white;
@@ -41,12 +41,12 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 5; /* Below content but above background */
-            opacity: 00.08; /* Semi-transparent for watermark effect */
+            opacity: 00.04; /* Semi-transparent for watermark effect */
             pointer-events: none; /* Prevents interaction with watermark */
         }
 
         .watermark img {
-            width: 300px; /* Larger size for visibility, adjust as needed */
+            width: 400px; /* Larger size for visibility, adjust as needed */
             height: auto;
         }
 
@@ -360,7 +360,7 @@
     </div>
 
     <div class="slider-container">
-    <div class="badge">FRESH</div>
+    <div class="badge">Organic</div>
     <div class="slider" id="slider">
         <div class="slide">
             <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
