--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="slide">
-            <img src="cherry_to2.webp" alt="Cherry Tomato Image 2" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="cherry_to2.jpg" alt="Cherry Tomato Image 2" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="slide">
             <img src="cherry_to3.jpg" alt="Cherry Tomato Image 3" style="width: 100%; height: 100%; object-fit: cover;">
