--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             background: #f8f9fa;
             color: #333;
             line-height: 1.6;
-            position: relative; /* Ensure body is a positioning context for watermark */
+            position: relative;
         }
 
         .header {
-            background: linear-gradient(135deg, #ff4f4f 0%, #639976 100%); /* Updated to tomato-inspired red-orange gradient */
+            background: linear-gradient(135deg, #ff4f4f 0%, #639976 100%);
             padding: 20px;
             text-align: center;
             color: white;
@@ -40,13 +40,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            z-index: 5; /* Below content but above background */
-            opacity: 00.04; /* Semi-transparent for watermark effect */
-            pointer-events: none; /* Prevents interaction with watermark */
+            z-index: 5;
+            opacity: 0.04;
+            pointer-events: none;
         }
 
         .watermark img {
-            width: 600px; /* Larger size for visibility, adjust as needed */
+            width: 600px;
             height: auto;
         }
 
@@ -138,7 +138,7 @@
             padding: 25px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.1);
             position: relative;
-            z-indexupsert: 10px;
+            z-index: 10;
         }
 
         .product-title {
@@ -300,6 +300,36 @@
             margin-top: 4px;
         }
 
+        .footer {
+            text-align: center;
+            padding: 20px;
+            color: #666;
+            font-size: 14px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .footer .author {
+            font-size: 18px;
+            font-weight: 700;
+            color: #2d5016;
+        }
+
+        .footer .tagline {
+            font-size: 12px;
+            color: #666;
+        }
+
+        .watermark-text {
+            display: block;
+            margin-top: 10px;
+            font-size: 16px;
+            font-weight: 500;
+            color: #4a7c2c;
+        }
+
         @media (max-width: 480px) {
             .product-title {
                 font-size: 24px;
@@ -320,7 +350,7 @@
             }
 
             .watermark img {
-                width: 200px; /* Smaller watermark on mobile */
+                width: 200px;
             }
         }
 
@@ -357,27 +387,28 @@
 
     <div class="watermark">
         <img src="christ_logo1.jpg" alt="Watermark Logo">
+        <span class="watermark-text">By Sai Darshan</span>
     </div>
 
     <div class="slider-container">
-    <div class="badge">Organic</div>
-    <div class="slider" id="slider">
-        <div class="slide">
-            <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
+        <div class="badge">Organic</div>
+        <div class="slider" id="slider">
+            <div class="slide">
+                <img src="cherry_to1.webp" alt="Cherry Tomato Image 1" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
+            <div class="slide">
+                <img src="cherry_to2.png" alt="Cherry Tomato Image 2" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
+            <div class="slide">
+                <img src="cherry_to3.jpg" alt="Cherry Tomato Image 3" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
         </div>
-        <div class="slide">
-            <img src="cherry_to2.png" alt="Cherry Tomato Image 2" style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-        <div class="slide">
-            <img src="cherry_to3.jpg" alt="Cherry Tomato Image 3" style="width: 100%; height: 100%; object-fit: cover;">
+        <div class="slider-dots">
+            <div class="dot active" onclick="goToSlide(0)"></div>
+            <div class="dot" onclick="goToSlide(1)"></div>
+            <div class="dot" onclick="goToSlide(2)"></div>
         </div>
     </div>
-    <div class="slider-dots">
-        <div class="dot active" onclick="goToSlide(0)"></div>
-        <div class="dot" onclick="goToSlide(1)"></div>
-        <div class="dot" onclick="goToSlide(2)"></div>
-    </div>
-</div>
 
     <div class="container">
         <div class="product-info">
@@ -516,6 +547,12 @@
         <button class="cta-button" onclick="showComingSoon()">
             📊 Get Real Time Data
         </button>
+
+        <div class="footer">
+            <p>By</p>
+            <p class="author">SAI DARSHAN</p>
+            <p class="tagline">Enhancing Innovation to Transform Agriculture</p>
+        </div>
     </div>
 
     <script>
@@ -538,7 +575,6 @@
             goToSlide(currentSlide);
         }
 
-        // Auto-slide every 4 seconds
         setInterval(autoSlide, 4000);
 
         function showComingSoon() {
