--- a/index.html
+++ b/index.html
@@ -36,35 +36,33 @@
             overflow-x: hidden;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            position: relative;
         }
 
-        /* Floating Elements */
-        .floating-elements {
+        /* ORIGINAL Watermark - Restored Exactly */
+        .watermark {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             z-index: 1;
-            overflow: hidden;
+            opacity: 0.04;
+            pointer-events: none;
         }
 
-        .float-item {
-            position: absolute;
-            opacity: 0.08;
-            animation: float 20s infinite linear;
+        .watermark img {
+            width: 600px;
+            height: auto;
+            filter: grayscale(100%) brightness(1.2);
         }
 
-        .float-item:nth-child(1) { top: 20%; left: 10%; animation-delay: 0s; }
-        .float-item:nth-child(2) { top: 60%; right: 15%; animation-delay: -5s; }
-        .float-item:nth-child(3) { top: 80%; left: 20%; animation-delay: -10s; }
-        .float-item:nth-child(4) { bottom: 20%; right: 10%; animation-delay: -15s; }
-
-        @keyframes float {
-            0% { transform: translateY(0px) rotate(0deg); }
-            50% { transform: translateY(-20px) rotate(180deg); }
-            100% { transform: translateY(0px) rotate(360deg); }
+        .watermark-text {
+            display: block;
+            margin-top: 10px;
+            font-size: 16px;
+            font-weight: 500;
+            color: #4a7c2c;
+            text-align: center;
         }
 
         /* Header */
@@ -76,6 +74,8 @@
             position: relative;
             overflow: hidden;
             box-shadow: var(--card-shadow);
+            z-index: 10;
+            margin-bottom: 20px;
         }
 
         .header::before {
@@ -240,6 +240,7 @@
             overflow: hidden;
             transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             backdrop-filter: blur(20px);
+            z-index: 10;
         }
 
         .product-card::before {
@@ -349,6 +350,7 @@
             position: relative;
             overflow: hidden;
             transition: all 0.4s ease;
+            z-index: 10;
         }
 
         .content-section:hover {
@@ -491,6 +493,7 @@
             overflow: hidden;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            z-index: 10;
         }
 
         .cta-button::before {
@@ -526,6 +529,7 @@
             border-radius: var(--border-radius) var(--border-radius) 0 0;
             box-shadow: 0 -20px 60px rgba(0,0,0,0.05);
             margin: 0 16px 16px;
+            z-index: 10;
         }
 
         .footer-author {
@@ -548,35 +552,12 @@
             line-height: 1.5;
         }
 
-        /* Watermark */
-        .watermark {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(-15deg);
-            z-index: 1;
-            opacity: 0.06;
-            pointer-events: none;
-            text-align: center;
-        }
-
-        .watermark img {
-            width: 180px;
-            height: auto;
-            filter: grayscale(100%) brightness(1.2);
-            margin-bottom: 12px;
-        }
-
-        .watermark-text {
-            font-size: 18px;
-            font-weight: 700;
-            color: var(--leaf-green);
-            letter-spacing: 2px;
-            text-transform: uppercase;
-        }
-
         /* Mobile Optimizations */
         @media (max-width: 480px) {
+            .watermark img {
+                width: 200px;
+            }
+            
             .hero-section {
                 height: 280px;
             }
@@ -638,6 +619,10 @@
                 grid-template-columns: repeat(4, 1fr);
                 gap: 20px;
             }
+            
+            .watermark img {
+                width: 600px;
+            }
         }
 
         /* Smooth Scroll */
@@ -665,18 +650,10 @@
     </style>
 </head>
 <body>
-    <!-- Floating Background Elements -->
-    <div class="floating-elements">
-        <div class="float-item">🍅</div>
-        <div class="float-item">🍒</div>
-        <div class="float-item">🌿</div>
-        <div class="float-item">🍅</div>
-    </div>
-
-    <!-- Watermark -->
+    <!-- ORIGINAL Watermark - Restored Exactly -->
     <div class="watermark">
         <img src="christ_logo1.jpg" alt="Christ Logo">
-        <span class="watermark-text">Premium Organic</span>
+        <span class="watermark-text">By Sai Darshan</span>
     </div>
 
     <!-- Header -->
@@ -722,8 +699,8 @@
         </div>
     </section>
 
-    <!-- Product Info Card -->
     <div class="container">
+        <!-- Product Info Card -->
         <article class="product-card fade-in">
             <h2 class="product-title">Sweet Cherry Tomato</h2>
             <p class="product-subtitle">Experience the perfect balance of sweetness and juiciness in every bite. Grown in our state-of-the-art greenhouse with precision climate control, these cherry tomatoes deliver unmatched flavor and nutrition throughout the year. Perfect for snacking, salads, or gourmet dishes.</p>
