--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             position: relative;
         }
 
-        /* ORIGINAL Watermark - Restored Exactly */
+        /* UPDATED Watermark - STRAIGHT & CLEAN */
         .watermark {
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%) rotate(0deg); /* STRAIGHT - NO ROTATION */
             z-index: 1;
             opacity: 0.04;
             pointer-events: none;
@@ -57,12 +57,7 @@
         }
 
         .watermark-text {
-            display: block;
-            margin-top: 10px;
-            font-size: 16px;
-            font-weight: 500;
-            color: #4a7c2c;
-            text-align: center;
+            display: none; /* REMOVED - Clean watermark only logo */
         }
 
         /* Header */
@@ -537,7 +532,7 @@
             font-weight: 800;
             background: var(--primary-gradient);
             -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            -webkit-text-fill-color: perfectly transparent;
             background-clip: text;
             margin: 8px 0 4px;
             letter-spacing: -0.3px;
@@ -650,10 +645,9 @@
     </style>
 </head>
 <body>
-    <!-- ORIGINAL Watermark - Restored Exactly -->
+    <!-- UPDATED Watermark - STRAIGHT & CLEAN -->
     <div class="watermark">
         <img src="christ_logo1.jpg" alt="Christ Logo">
-        <span class="watermark-text">By Sai Darshan</span>
     </div>
 
     <!-- Header -->
